# ObsidianSync

./: Dictionaries.md  README.md  Week6.md  Week7 PDF.md  Week_4.md
Week7/letter_counter/: letter_counter.c  letter_counter.h  main_letters.c  program
Week7/word_counter/: CMakeLists.txt  binsearch.c  binsearch.h  counter.c  counter.h  generic_functions.c  set.c  set.h  test_counter.c  test_counter.h  test_main.c  test_set.c  test_set.h  word_counter.c
